--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,28 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: sample_app_development
+  username: nguyenit2k2
+  password: hoangnguyen123
+  host: localhost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: sample_app_test
+  username: nguyenit2k2
+  password: hoangnguyen123
+  host: localhost
 
 production:
   <<: *default
-  database: storage/production.sqlite3
+  database: sample_app_production
+  username: nguyenit2k2
+  password: hoangnguyen123
+  host: localhost
+  # Thay thế bằng URL của cơ sở dữ liệu PostgreSQL trong môi trường sản xuất
+  # Các thông tin bảo mật nên được lưu trữ dưới dạng biến môi trường
